--- a/DTrivia/DTrivia.CSharp.csproj
+++ b/DTrivia/DTrivia.CSharp.csproj
@@ -61,15 +61,6 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Cecil">
-      <HintPath>Library\UnityAssemblies\Mono.Cecil.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Common">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor.iOS.Extensions.Xcode">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
     </Reference>
@@ -80,8 +71,11 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Common\Enum.cs" />
     <Compile Include="Assets\Scripts\Common\UILokingSingleton.cs" />
+    <Compile Include="Assets\Scripts\MainGame\EndlessController.cs" />
+    <Compile Include="Assets\Scripts\MainGame\GridCellController.cs" />
     <Compile Include="Assets\Scripts\MainGame\Procedural2DGrid.cs" />
     <Compile Include="Assets\Scripts\MainMenu\UIController.cs" />
+    <Compile Include="Assets\Scripts\Model\CellModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
