--- a/DTrivia/DTrivia.CSharp.csproj
+++ b/DTrivia/DTrivia.CSharp.csproj
@@ -77,5 +77,10 @@
     <Compile Include="Assets\Scripts\MainMenu\UIController.cs" />
     <Compile Include="Assets\Scripts\Model\CellModel.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Resources\Hombre\h.txt" />
+    <None Include="Assets\Resources\Mujer\m.txt" />
+    <None Include="Assets\Resources\Serialized\sBody.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
